Added readme, removed the hello world code

--- a/manifest.json
+++ b/manifest.json
@@ -6,7 +6,5 @@
     "default_icon": "images/lock.png",
 	"popup": "popup.html"
   },
-  "permissions": [
-    "http://api.flickr.com/"
-  ]
+  "permissions": []
 }
