--- a/manifest.json
+++ b/manifest.json
@@ -1,12 +1,19 @@
 {
   "name": "SSLSTripWire",
-  "version": "0.1",
+  "version": "0.1.0.1",
   "description": "Attempts to detect and prevent SSL Strip attacks.",
   "browser_action": {
-    "default_icon": "images/lock.png",
-	"popup": "popup.html"
+	"default_title": "Display Page Statistics",
+    "default_icon": "images/lock.png"
   },
   "permissions": [
-	"experimental"
-  ]
+	"tabs", "http://*/*", "https://*/*"
+  ],
+  "content_scripts": [
+    {
+      "matches": ["http://*/*", "https://*/*"],
+      "js": ["sslstrip.content.js"]
+    }
+  ],
+  "background_page": "background.html"
 }
