Added basic options page

--- a/manifest.json
+++ b/manifest.json
@@ -15,5 +15,6 @@
       "js": ["sslstrip.content.js"]
     }
   ],
-  "background_page": "background.html"
+  "background_page": "background.html",
+  "options_page" : "options.html"
 }
