--- a/manifest.json
+++ b/manifest.json
@@ -8,7 +8,7 @@
 	"default_popup": "popup.html"
   },
   "permissions": [
-	"tabs", "http://*/*", "https://*/*"
+	"tabs", "http://*/*", "https://*/*", "unlimitedStorage"
   ],
   "background_page": "background.html",
   "options_page" : "options.html"
